# vut-fit-zpo-proj

./: CMakeLists.txt  LICENSE  README.md  readme.txt
data/: video.avi
src/: main.cpp
